--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 name: 梓豪的博客
 email: qzh1991@qq.com
-author: qzh
 url: https://qzh1991.github.io/
-resume_site: http://xiaokedada.com/me/
 github: https://github.com/qzh1991/
+author: M/J
+resume_site: http://xiaokedada.com/me/
 baseurl: ""  #根目录
 description: 假如生活欺骗了你，不要悲伤，不要哭泣。
 motto: 我们笑着说再见，却深知再见遥遥无期。
